# RobotProject

./: .gitignore  README.md
Report/: Report.tex
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src/exercises/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/exercises/aws/: roboMakerSettings.json
catkin_ws/src/exercises/part0/python/: numpy_reminder.py  numpy_reminder_solution.py  plotting.py  plotting_solution.py  welcome.py  welcome_solution.py
catkin_ws/src/exercises/part0/ros/: Exercises  README.txt
catkin_ws/src/exercises/part0/ros/launch/: burger_remote.launch  gazebo.launch  hello_world.launch  hello_world_all.launch  hello_world_all_solution.launch  hello_world_aws.launch  rviz.launch
catkin_ws/src/exercises/part1/ros/: obstacle_avoidance.py  plot_trajectory.py
catkin_ws/src/exercises/part2/python/: potential_field.py  rrt_improved.py
catkin_ws/src/exercises/part2/ros/: README.txt  plot_trajectory.py  potential_field_navigation.py  rrt_navigation.py
catkin_ws/src/exercises/part2/ros/launch/: potential_field_navigation.launch  rrt_navigation.launch  send_clock.launch  slam.launch
catkin_ws/src/exercises/project/ros/: obstacle_avoidance.py
catkin_ws/src/exercises/project/ros/launch/: gazebo_simple.launch  obstacle_avoidance.launch
project/: maintain_formation.py
project/python/: diamond.pgm  diamond.yaml  kinematics.py  kinematics_bonus.py  maze.pgm  rrt.py
project/ros/: README.txt  formation_move.py  formation_move_decentralized.py  formation_move_decentralized_0.py  formation_move_decentralized_1.py  formation_move_decentralized_2.py  formation_move_decentralized_3.py  formation_move_decentralized_4.py  formation_move_simple.py  get_combined_velocity.py  localization.py  maintain_formation.py  obstacle_avoidance.py  (+2 more)
(+72 files in other folders)
